# COTRA

./: .gitignore  1D_Transport.py  Animate_Plot.py  Animated_Plot_in_Time.py  Comparison_In_Time.py  Concentration_vs_Time_at_Point.py  Concetration_vs_Space_at_Time.py  LICENSE  NLADE1.py  README.md  pyproject.toml  showcase.py
COTRA/: __init__.py  animation.py  export.py  plot.py  solver.py
