[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "COTRA"
version = "v0.0.1-alpha"
description = "A simple 1D contaminant transport simulation library"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Simone Pagliuca", email = "pagliuca.simone01@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/simo-pagliu/COTRA"
